--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
   .hamburguesamitad {
     width: 100%;
     height: 100vh;
-    background: -webkit-gradient(linear, left top, right top, from(#fff), color-stop(50%, #fff), color-stop(50%, #ff0000), to(#ff0000));
-    background: linear-gradient(to right, #fff 0%, #fff 50%, #ff0000 50%, #ff0000 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#fff), color-stop(50%, #fff), color-stop(50%, #700033), to(#700033));
+    background: linear-gradient(to right, #fff 0%, #fff 50%, #700033 50%, #700033 100%);
   }
   header {
     padding: 0px 20px 0px 20px;
@@ -62,7 +62,7 @@
     font-size: 1.5vw;
   }
   .cont-ul-nav ul li .enrojo {
-    color: #ff0000;
+    color: #c86893;
   }
   .cont-numero {
     width: 50%;
@@ -118,16 +118,22 @@
     padding: 10px 30px 10px 30px;
     border-radius: 10px;
     border: none;
-    background-color: #ff0000;
+    background-color: #700033;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
   }
   .cont-singlePatty button:hover {
-    background-color: #df0000;
+    background-color: #801344;
   }
   .cont-hamburguesaMitad {
     width: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .cont-hamburguesaMitad img {
     width: 100%;
@@ -152,6 +158,7 @@
   .cont-sassy p {
     font-size: 1.3vw;
     text-align: left;
+    color: #fff;
   }
   .cont-BURGUERS {
     width: 10%;
@@ -178,7 +185,7 @@
   .titulo-our p {
     font-family: 'Indie Flower', cursive;
     font-size: 3vw;
-    color: #ff0000;
+    color: #700033;
   }
   .titulo-our h4 {
     font-size: 4vw;
@@ -215,7 +222,7 @@
     margin: 5%;
     font-size: 20px;
     font-weight: 800;
-    color: #ff0000;
+    color: #700033;
   }
   .card p {
     text-align: center;
@@ -237,7 +244,7 @@
   }
   .card div button {
     padding: 5px 10px 5px 10px;
-    background-color: #df0000;
+    background-color: #700033;
     border: none;
     border-radius: 10px;
     color: #fff;
