--- a/css/style.scss
+++ b/css/style.scss
@@ -16,8 +16,8 @@
             to right, 
             #fff 0%,
             #fff 50%, 
-            #ff0000 50%, 
-            #ff0000 100%
+            #700033 50%, 
+            #700033 100%
         );
         
         
@@ -66,7 +66,7 @@
                 }
 
                 .enrojo{
-                    color: #ff0000;
+                    color: #c86893;
                 }
             }
 
@@ -118,20 +118,21 @@
             padding: 10px 30px 10px 30px;
             border-radius: 10px;
             border: none;
-            background-color: #ff0000;
+            background-color: #700033;
             color: #fff;
             font-size: 16px;
             cursor: pointer;
         }
 
         button:hover{
-            background-color: #df0000;
+            background-color: #801344;
         }
     }
 
     .cont-hamburguesaMitad{
         width: 40%;
-
+        display: flex;
+        align-items: center;
         img{
             width: 100%;
         }
@@ -151,6 +152,7 @@
         p{
             font-size: 1.3vw;
             text-align: left;
+            color: #fff;
         }
     }
 
@@ -179,7 +181,7 @@
         p{
             font-family: 'Indie Flower', cursive;
             font-size: 3vw;
-            color: #ff0000;
+            color: #700033;
         }
 
         h4{
@@ -211,7 +213,7 @@
             margin: 5%;
             font-size: 20px;
             font-weight: 800;
-            color: #ff0000;
+            color: #700033;
         }
 
         p{
@@ -230,7 +232,7 @@
 
             button{
                 padding: 5px 10px 5px 10px;
-                background-color: #df0000;
+                background-color: #700033;
                 border: none;
                 border-radius: 10px;
                 color: #fff;
