--- a/css/style.css
+++ b/css/style.css
@@ -550,8 +550,10 @@ button {
     margin-bottom: 5%;
     border-radius: 10px;
     background: #fff;
-    -webkit-box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
-            box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+    -webkit-box-shadow: 20px 20px 60px #bebebe,
+ -20px -20px 60px #ffffff;
+            box-shadow: 20px 20px 60px #bebebe,
+ -20px -20px 60px #ffffff;
     width: 30%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -844,4 +846,83 @@ button {
     padding: 20px;
   }
 }
+
+/* CARDS DEL CARRITO */
+.fotoHamburguesa{
+  width: 100px;
+}
+
+.tuCarro{
+  text-align: center;
+  font-size: 36px;
+  color: #801344;
+}
+
+.cont-productosElegidos{
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5%;
+}
+
+.productosElegidos{
+  border: 2px solid #700033;
+  border-radius: 8px 8px 0px 0px;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
+}
+
+.productoElegido{
+  width: 50%;
+  height: 50%;
+  border: 1px solid;
+  background-color: khaki;
+}
+
+.cont-infoHamburguesa{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cont-botonComprar{
+  border: 2px solid #700033;
+  border-radius: 0px 0px 8px 8px;
+  width: 80%;
+  height: 20%;
+  background-color: #801344;
+  
+}
+
+.cont-botonEliminar{
+  display: flex;
+  justify-content: end;
+  height: 20%;
+  padding: 1% 1% 0 0;
+}
+
+.sacarDelCarrito{
+  padding: 5px;
+  border-radius: 8px;
+  border: 1px solid;
+  background-color: #801344be;
+}
+
+#formOrNot{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.saludos{
+  font-size: 60px;
+}
+
+
+
 /*# sourceMappingURL=style.css.map */
