--- a/css/mobile.css
+++ b/css/mobile.css
@@ -159,7 +159,7 @@
     margin: 10% 10%;
     -webkit-box-shadow: 0px 0px 10px 0px;
             box-shadow: 0px 0px 10px 0px;
-    background-color: #f7f7f7;
+    background-color: #fda;
   }
   .card p {
     text-align: center;
