--- a/css/style.scss
+++ b/css/style.scss
@@ -200,9 +200,8 @@ button{
     .card{
         margin-bottom: 5%;
         border-radius: 10px;
-        background: #fff;
-        box-shadow:  20px 20px 60px #bebebe,
-        -20px -20px 60px #ffffff;
+        background: #fda;
+        
         width: 30%;
         display: flex;
         flex-direction: column;
