--- a/css/mobile.css
+++ b/css/mobile.css
@@ -160,6 +160,7 @@
     -webkit-box-shadow: 0px 0px 10px 0px;
             box-shadow: 0px 0px 10px 0px;
     background-color: #fda;
+    min-width: 80%;
   }
   .card p {
     text-align: center;
