--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 @media screen and (max-width: 576px) {
   img {
     width: 100px;
@@ -997,7 +999,10 @@ button {
   }
 }
 
-
+.onow{
+  color: #e2e2e2;
+  text-decoration: none;
+}
 
 
 /*# sourceMappingURL=style.css.map */
